# retinalsim

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  fix_lint.py.txt  paper.bib  paper.md  pyproject.toml
.github/workflows/: draft-pdf.yml  tests.yml
bench_venv/: pyvenv.cfg
bench_venv/Scripts/: activate  activate.bat
deploy/: Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
examples/: basic_simulation.py  benchmark_vs_p2p.py  beyeler_subjects.py  validation_beyeler.py  validation_results.txt
frontend/: index.html
retinalsim/: __init__.py  __main__.py  axon_map.py  constants.py  server.py
tests/: test_retinalsim.py
